# HttpRequest

./: .gitignore  CMakeLists.txt  README.md
Code/HttpRequest/: CMakeLists.txt  HttpRequest.cpp
Code/HttpRequest/Include/HttpRequest/: HttpRequest.h
Code/HttpRequest/cmake/: env.cmake  out.cmake
Test/TestHttpRequest/: CMakeLists.txt  TestHttpRequest.cpp
cmake/: out.cmkae  qt.cmake
